--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "bcrypt": "^6.0.0",
     "next": "15.4.5",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
