--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^6.0.0",
     "next": "15.4.5",
     "next-auth": "^4.24.11",
+    "puppeteer": "^24.21.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
