--- a/package.json
+++ b/package.json
@@ -10,21 +10,29 @@
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "bcrypt": "^6.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.544.0",
     "next": "15.4.5",
     "next-auth": "^4.24.11",
-    "puppeteer": "^24.21.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "server-only": "^0.0.1"
+    "recharts": "^2.15.4",
+    "server-only": "^0.0.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "postcss": "^8.5.6",
     "prisma": "^6.14.0",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.8"
   }
 }
