--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-to-print": "^3.1.1",
     "recharts": "^2.15.4",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1"
